<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/showTV"
        android:layout_width="396dp"
        android:layout_height="383dp"
        android:background="#C3BCBC"
        android:text="0"
        android:textAlignment="center"
        android:textSize="200sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/blackBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/black"
        android:text="@string/black"
        android:onClick="blackBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTV" />

    <Button
        android:id="@+id/redBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="48dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#CF1919"
        android:text="@string/red"
        android:onClick="redBackground"
        app:layout_constraintStart_toEndOf="@+id/blackBtn"
        app:layout_constraintTop_toBottomOf="@+id/showTV" />

    <Button
        android:id="@+id/greenBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="48dp"
        android:backgroundTint="#12C619"
        android:textColor="#FFFFFF"
        android:text="@string/green"
        android:onClick="greenBackground"
        app:layout_constraintStart_toEndOf="@+id/redBtn"
        app:layout_constraintTop_toBottomOf="@+id/showTV" />

    <Button
        android:id="@+id/blueBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/blue"
        android:onClick="blueBackground"
        android:textColor="#FFFFFF"
        android:backgroundTint="#263DBC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toEndOf="@+id/greenBtn"
        app:layout_constraintTop_toBottomOf="@+id/showTV" />

    <Button
        android:id="@+id/countBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#C6C0C0"
        android:text="@string/count"
        android:onClick="count"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackBtn" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#C6C0C0"
        android:text="@string/reset"
        android:onClick="resetToInitial"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/countBtn"
        app:layout_constraintTop_toBottomOf="@+id/blueBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>